.overlay > position: absolute (fixed the portlet configuration menu) fixed the misaligned menu on responsive layout (startpage)
fixed return data type from basket

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -1012,7 +1012,7 @@ Liferay fixes - Dockbar
 Liferay fixes - deprecated classes
 =========================================================*/
 .overlay {
-    position: relative;
+    position: absolute;
 }
 
 
